--- a/32-trading-days.qmd
+++ b/32-trading-days.qmd
@@ -127,7 +127,7 @@ ts_dygraphs(ts_c(
 ## Case Study: Replicate X-13 trading days adjustment {#sec-replicate-x-13-trading-days-adjustment}
 
 'Trading day adjustment' removes the effect of the weekdays, but does not include holidays, such as Christmas or Easter.
-These are handled separately (Easter) (@sec-holidays) or dealt with by standard seasonal adjustment (Christmas).
+These are handled separately (Easter) (@sec-holidays) or dealt with standard seasonal adjustment (Christmas).
 
 Sometimes, users may want to specify user-defined trading day regressors, to incorporate country specific trading day patterns.
 In @sec-replicate-x-13-trading-days-adjustment, we replicate the built-in regressors.
