--- a/34-seasonal-breaks.qmd
+++ b/34-seasonal-breaks.qmd
@@ -18,7 +18,7 @@ status("drafting")  # drafting, polishing, complete
  -->
 ```
 Some series have seasonal breaks.
-Apart from visual inspection of the unadjusted series, a look at monthplot() is usually helpful.
+Apart from visual inspection of the unadjusted series, a look at `monthplot()` is usually helpful.
 If there are seasonal breaks, this leads to a jump in the SI ratio.
 
 ## Case Study: Imports of Goods to China
