--- a/32-trading-days.qmd
+++ b/32-trading-days.qmd
@@ -275,17 +275,59 @@ Andrea, do you know of an Azerbaijani example that we could use as a case study?
 
 ## Case Study: Azerbaijani Retail Sales
 
-We build upon the case study in @sec-holidays. Retail sales are usually affected by shifts in trading days.
+We build upon the case study in @sec-holidays where the retail sales was used. This type of series is also a candidate since retail sales usually shows differences between weekdays and weekend. We verify this assumption adding a `td1coef` regressor.
 
 ```{r}
 library(cbar.sa)
 library(seasonal)
-m0 <- seas(trade_tur, x11 = "")
-m1 <- seas(
-  trade_tur
+m0 <- seas(
+  x = trade_tur,
+  regression.variables = c("ls2008.2", "ls2009.1", "ao2015.2"),
+  arima.model = "(1 1 0)(0 1 0)",
+  regression.aictest = NULL,
+  outlier = NULL,
+  transform.function = "log"
 )
 summary(m0)
+```
+```{r}
+m1 <- seas(
+  x = trade_tur,
+  regression.variables = c("ls2008.2", "ls2009.1", "ao2015.2", "td1coef"),
+  arima.model = "(1 1 0)(0 1 0)",
+  regression.aictest = NULL,
+  outlier = NULL,
+  transform.function = "log"
+)
 summary(m1) 
+```
+Eventually, the `td1coef` regressor is not significant.
+
+## Case Study: Azerbaijani Consumer price index for construction
+
+`td1coef` is significant.
+
+```{r}
+m0 <- seas(
+  x = cpi_const,
+  regression.variables = c("const", "ls2009.1"),
+  arima.model = "(1 1 0)",
+  regression.aictest = NULL,
+  outlier = NULL,
+  transform.function = "none"
+)
+summary(m0)
+```
+```{r}
+m1 <- seas(
+  x = cpi_const,
+  regression.variables = c("const", "td1coef", "ls2009.1"), 
+  arima.model = "(1 1 0)",
+  regression.aictest = NULL,
+  outlier = NULL,
+  transform.function = "none"
+)
+summary(m1)
 ```
 
 ## Exercises
